Fix post el settings broken when scrollbar

--- a/elements/upfront-posts/css/editor.css
+++ b/elements/upfront-posts/css/editor.css
@@ -309,7 +309,7 @@
 
 .upfront-display-type-list .upfront-settings-item-content .upfront-post-limit,
 .upfront-display-type-list .upfront-settings-item-content .upfront-offset-number {
-	width: 70px;
+	width: 65px;
 	position: relative;
 	top: -8px;
 }
